--- a/home/vscode/settings.json
+++ b/home/vscode/settings.json
@@ -1,23 +1,86 @@
 {
     // Built-in //
     "accessibility.dimUnfocused.enabled": true,
-    "accessibility.dimUnfocused.opacity": 0.90,
+    "accessibility.dimUnfocused.opacity": 0.85,
+    "editor.cursorBlinking": "phase",
+    "editor.cursorSmoothCaretAnimation": "on",
+    "editor.cursorSurroundingLines": 15,
+    "editor.defaultColorDecorators": "always",
+    "editor.fontFamily": "'JetBrainsMono Nerd Font', Monaco, Consolas",
     "editor.fontSize": 15,
+    "editor.fontLigatures": true,
+    "editor.fontWeight": "500",
     "editor.guides.bracketPairs": true,
     "editor.guides.highlightActiveIndentation": true,
+    "editor.letterSpacing": 0.2,
     "editor.lineNumbers": "relative",
-    "editor.renderWhitespace": "selection",
+    "editor.lineHeight": 1.618,
+    "editor.renderWhitespace": "all",
     "editor.minimap.enabled": false,
     "editor.tabSize": 2,
-    "window.zoomLevel": -0.5,
-    "workbench.startupEditor": "none",
+    "editor.smoothScrolling": true,
+    "explorer.sortOrder": "type",
     "extensions.experimental.affinity": {
-        "vscodevim.vim": 1
+        "vscodevim.vim": 1,
+    },
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 2500,
+    "window.zoomLevel": -0.75,
+    "workbench.startupEditor": "none",
+    "workbench.settings.editor": "json",
+    "workbench.list.smoothScrolling": true,
+    "workbench.colorCustomizations": {
+        "statusBar.background": "#000000",
+        "statusBar.noFolderBackground": "#000000",
+        "statusBar.debuggingBackground": "#000000",
+        "statusBar.foreground": "#a6e3a1",
+        "statusBar.debuggingForeground": "#a6e3a1"
+    },
+    "workbench.colorTheme": "Catppuccin Mocha",
+    "workbench.iconTheme": "catppuccin-mocha",
+    "workbench.activityBar.location": "top",
+    "terminal.integrated.smoothScrolling": true,
+    "terminal.integrated.cursorBlinking": true,
+    "terminal.integrated.fontFamily": "'JetBrainsMono Nerd Font', Monaco, Consolas",
+    "terminal.integrated.fontSize": 12,
+    "terminal.integrated.fontLigatures.enabled": true,
+    "terminal.integrated.fontWeight": "500",
+    "terminal.integrated.enableVisualBell": true,
+    "[python]": {
+        "editor.tabSize": 4
+    },
+    "[json]": {
+        "editor.tabSize": 4
+    },
+    "[jsonc]": {
+        "editor.tabSize": 4
     },
     // VSCodeVim //
+    "vim.changeWordIncludesWhitespace": false,
+    "vim.cursorStylePerMode.normal": "block",
+    "vim.cursorStylePerMode.insert": "line-thin",
+    "vim.cursorStylePerMode.replace": "underline",
+    "vim.cursorStylePerMode.visual": "block-outline",
+    "vim.cursorStylePerMode.visualblock": "block-outline",
+    "vim.cursorStylePerMode.visualline": "block-outline",
     "vim.overrideCopy": true,
     "vim.useSystemClipboard": true,
+    "vim.autoindent": true,
     "vim.hlsearch": true,
+    "vim.ignorecase": true,
+    "vim.incsearch": true,
+    "vim.inccommand": "replace",
+    "vim.searchHighlightColor": "#ff0000",
+    "vim.searchHighlightTextColor": "#ffffff",
+    "vim.searchMatchColor": "#ff0000",
+    "vim.searchMatchTextColor": "#ffffff",
+    "vim.substitutionColor": "#00ffff",
+    "vim.substitutionTextColor": "#ffffff",
+    "vim.visualstar": true,
+    "vim.highlightedyank.enable": true,
+    "vim.highlightedyank.color": "#ff0000",
+    "vim.highlightedyank.textColor": "#ffffff",
+    "vim.highlightedyank.duration": 1000,
     "vim.insertModeKeyBindings": [
         {
             "before": [
@@ -58,4 +121,101 @@
             ]
         }
     ],
+    "vim.operatorPendingModeKeyBindings": [
+        {
+            "before": [
+                "L"
+            ],
+            "after": [
+                "$"
+            ]
+        },
+        {
+            "before": [
+                "H"
+            ],
+            "after": [
+                "^"
+            ]
+        }
+    ],
+    "vim.statusBarColorControl": true,
+    "vim.statusBarColors.normal": [
+        "#000000",
+        "#ffffff"
+    ],
+    "vim.statusBarColors.insert": [
+        "#000000",
+        "#f38ba8"
+    ],
+    "vim.statusBarColors.visual": [
+        "#000000",
+        "#a6e3a1"
+    ],
+    "vim.statusBarColors.visualline": [
+        "#000000",
+        "#a6e3a1"
+    ],
+    "vim.statusBarColors.visualblock": [
+        "#000000",
+        "#a6e3a1"
+    ],
+    "vim.statusBarColors.replace": [
+        "#000000",
+        "#f9e2af"
+    ],
+    "vim.statusBarColors.commandlineinprogress": [
+        "#000000",
+        "#f5e0dc"
+    ],
+    "vim.statusBarColors.searchinprogressmode": [
+        "#000000",
+        "#89b4fa"
+    ],
+    "vim.statusBarColors.easymotionmode": [
+        "#000000",
+        "#fab387"
+    ],
+    "vim.statusBarColors.easymotioninputmode": [
+        "#000000",
+        "#fab387"
+    ],
+    "vim.statusBarColors.surroundinputmode": [
+        "#000000",
+        "#cba6f7"
+    ],
+    "vim.easymotion": true,
+    "vim.surround": true,
+    "vim.sneak": true,
+    "vim.camelCaseMotion.enable": true,
+    "vim.replaceWithRegister": true,
+    // Catppuccin Theme //
+    "catppuccin.accentColor": "blue",
+    "catppuccin.italicKeywords": true,
+    "catppuccin.italicComments": true,
+    "catppuccin.boldKeywords": true,
+    "catppuccin.workbenchMode": "minimal",
+    "catppuccin.bracketMode": "dimmed",
+    "catppuccin.colorOverrides": {
+        "mocha": {
+            "base": "#11111b",
+            "mantle": "#11111b",
+            "crust": "#11111b",
+        }
+    },
+    "catppuccin.customUIColors": {
+        "all": {
+            "editorCursor.background": "rosewater",
+            "editorLineNumber.activeForeground": "green",
+            "widget.border": "blue",
+        }
+    },
+    // Catppuccin Icon Theme //
+    "catppuccin-icons.hidesExplorerArrows": false,
+    "catppuccin-icons.specificFolders": true,
+    "catppuccin-icons.monochrome": false,
+    "catppuccin-icons.associations.languages": {},
+    "catppuccin-icons.associations.extensions": {},
+    "catppuccin-icons.associations.files": {},
+    "catppuccin-icons.associations.folders": {},
 }
